--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,77 @@
 absl-py==1.4.0
+asttokens==2.2.1
 astunparse==1.6.3
+attrs==23.1.0
+backcall==0.2.0
 cachetools==5.3.1
 certifi==2023.5.7
 charset-normalizer==3.1.0
+decorator==5.1.1
+exceptiongroup==1.1.2
+executing==1.2.0
 flatbuffers==23.5.26
 gast==0.4.0
 google-auth==2.21.0
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
 grpcio==1.56.0
+h11==0.14.0
 h5py==3.9.0
 idna==3.4
 importlib-metadata==6.7.0
+ipython==8.12.2
 jax==0.4.13
+jedi==0.18.2
 keras==2.12.0
 libclang==16.0.0
 Markdown==3.4.3
 MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
 ml-dtypes==0.2.0
 numpy==1.23.5
 oauthlib==3.2.2
 opt-einsum==3.3.0
+outcome==1.2.0
 packaging==23.1
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+poe-api==0.4.8
+prompt-toolkit==3.0.39
 protobuf==4.23.3
 psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pygame==2.5.0
+Pygments==2.15.1
+PySocks==1.7.1
+python-socks==2.3.0
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
 scipy==1.10.1
+selenium==4.10.0
 six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+stack-data==0.6.2
 tensorboard==2.12.3
 tensorboard-data-server==0.7.1
 tensorflow==2.12.0
 tensorflow-estimator==2.12.0
 tensorflow-io-gcs-filesystem==0.32.0
 termcolor==2.3.0
+tls-client==0.2.1
+traitlets==5.9.0
+trio==0.22.1
+trio-websocket==0.10.3
 typing_extensions==4.7.0
 urllib3==1.26.16
+wcwidth==0.2.6
+websocket-client==1.6.1
 Werkzeug==2.3.6
 wrapt==1.14.1
+wsproto==1.2.0
 zipp==3.15.0
