--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,65 @@
 absl-py==1.4.0
+aiohttp==3.8.5
+aiosignal==1.3.1
 annotated-types==0.5.0
+anyio==4.0.0
 asttokens==2.2.1
 astunparse==1.6.3
+async-timeout==4.0.3
 attrs==23.1.0
 backcall==0.2.0
+bardapi==0.1.33
+beautifulsoup4==4.12.2
+browser-cookie3==0.19.1
 cachetools==5.3.1
+cattrs==23.1.2
 certifi==2023.5.7
 charset-normalizer==3.1.0
+colorama==0.4.6
 decorator==5.1.1
+deep-translator==1.11.4
+diskcache==5.6.1
+docker==6.1.3
 exceptiongroup==1.1.2
 executing==1.2.0
 flatbuffers==23.5.26
+frozenlist==1.4.0
 gast==0.4.0
+google-api-core==2.11.1
 google-auth==2.21.0
 google-auth-oauthlib==1.0.0
+google-cloud-core==2.3.3
+google-cloud-translate==3.12.0
 google-pasta==0.2.0
+googleapis-common-protos==1.60.0
 grpcio==1.56.0
+grpcio-status==1.58.0
 h11==0.14.0
+h2==4.1.0
 h5py==3.9.0
+hpack==4.0.0
+httpcore==0.17.3
+httpx==0.24.1
+hyperframe==6.0.1
 idna==3.4
 importlib-metadata==6.7.0
 ipython==8.12.2
 jax==0.4.13
 jedi==0.18.2
+jeepney==0.8.0
 keras==2.12.0
+langdetect==1.0.9
 libclang==16.0.0
+llama-cpp-python==0.1.77
+lz4==4.3.2
 Markdown==3.4.3
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
 ml-dtypes==0.2.0
+multidict==6.0.4
 numpy==1.23.5
 oauthlib==3.2.2
+openai==0.28.0
 opt-einsum==3.3.0
 outcome==1.2.0
 packaging==23.1
@@ -39,12 +68,14 @@ pexpect==4.8.0
 pickleshare==0.7.5
 poe-api==0.5.2
 prompt-toolkit==3.0.39
+proto-plus==1.22.3
 protobuf==4.23.3
 psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pycryptodomex==3.18.0
 pydantic==2.1.1
 pydantic_core==2.4.0
 pygame==2.5.0
@@ -61,6 +92,7 @@ selenium==4.10.0
 six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
+soupsieve==2.5
 stack-data==0.6.2
 tensorboard==2.12.3
 tensorboard-data-server==0.7.1
@@ -69,6 +101,7 @@ tensorflow-estimator==2.12.0
 tensorflow-io-gcs-filesystem==0.32.0
 termcolor==2.3.0
 tls-client==0.2.1
+tqdm==4.66.1
 traitlets==5.9.0
 trio==0.22.1
 trio-websocket==0.10.3
@@ -79,7 +112,5 @@ websocket-client==1.6.1
 Werkzeug==2.3.6
 wrapt==1.14.1
 wsproto==1.2.0
+yarl==1.9.2
 zipp==3.15.0
-
-bardapi~=0.1.33
-openai~=0.28.0
