--- a/requirements.txt
+++ b/requirements.txt
@@ -3,51 +3,74 @@ aiohttp==3.8.5
 aiosignal==1.3.1
 annotated-types==0.5.0
 anyio==4.0.0
+asgiref==3.7.2
+astroid==3.0.2
 asttokens==2.2.1
 astunparse==1.6.3
 async-timeout==4.0.3
 attrs==23.1.0
 backcall==0.2.0
+backoff==2.2.1
 bardapi==0.1.33
+bcrypt==4.1.2
 beautifulsoup4==4.12.2
 browser-cookie3==0.19.1
+build==1.0.3
 cachetools==5.3.1
 cattrs==23.1.2
 certifi==2023.5.7
 charset-normalizer==3.1.0
+chroma-hnswlib==0.7.3
+chromadb==0.4.22
+click==8.1.7
 colorama==0.4.6
+coloredlogs==15.0.1
 decorator==5.1.1
 deep-translator==1.11.4
+Deprecated==1.2.14
+dill==0.3.7
 diskcache==5.6.1
 docker==6.1.3
 exceptiongroup==1.1.2
 executing==1.2.0
+fastapi==0.108.0
+filelock==3.13.1
 flatbuffers==23.5.26
 frozenlist==1.4.0
+fsspec==2023.12.2
 gast==0.4.0
+google-ai-generativelanguage==0.1.0
 google-api-core==2.11.1
 google-auth==2.21.0
 google-auth-oauthlib==1.0.0
 google-cloud-core==2.3.3
 google-cloud-translate==3.12.0
+google-generativeai==0.1.0rc1
 google-pasta==0.2.0
 googleapis-common-protos==1.60.0
-grpcio==1.56.0
+graphlib-backport==1.0.3
+grpcio==1.60.0
 grpcio-status==1.58.0
 h11==0.14.0
 h2==4.1.0
 h5py==3.9.0
 hpack==4.0.0
 httpcore==0.17.3
+httptools==0.6.1
 httpx==0.24.1
+huggingface-hub==0.20.2
+humanfriendly==10.0
 hyperframe==6.0.1
 idna==3.4
 importlib-metadata==6.7.0
+importlib-resources==6.1.1
 ipython==8.12.2
+isort==5.13.2
 jax==0.4.13
 jedi==0.18.2
 jeepney==0.8.0
 keras==2.12.0
+kubernetes==29.0.0
 langdetect==1.0.9
 libclang==16.0.0
 llama-cpp-python==0.1.77
@@ -55,23 +78,42 @@ lz4==4.3.2
 Markdown==3.4.3
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
+mccabe==0.7.0
 ml-dtypes==0.2.0
+mmh3==4.1.0
+monotonic==1.6
+mpmath==1.3.0
 multidict==6.0.4
 numpy==1.23.5
 oauthlib==3.2.2
+onnxruntime==1.16.3
 openai==0.28.0
+opentelemetry-api==1.22.0
+opentelemetry-exporter-otlp-proto-common==1.22.0
+opentelemetry-exporter-otlp-proto-grpc==1.22.0
+opentelemetry-instrumentation==0.43b0
+opentelemetry-instrumentation-asgi==0.43b0
+opentelemetry-instrumentation-fastapi==0.43b0
+opentelemetry-proto==1.22.0
+opentelemetry-sdk==1.22.0
+opentelemetry-semantic-conventions==0.43b0
+opentelemetry-util-http==0.43b0
 opt-einsum==3.3.0
 outcome==1.2.0
+overrides==7.4.0
 packaging==23.1
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
+platformdirs==4.1.0
 poe-api==0.5.2
+posthog==3.3.1
 prompt-toolkit==3.0.39
 proto-plus==1.22.3
 protobuf==4.23.3
 psutil==5.9.5
 ptyprocess==0.7.0
+pulsar-client==3.4.0
 pure-eval==0.2.2
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
@@ -80,8 +122,14 @@ pydantic==2.1.1
 pydantic_core==2.4.0
 pygame==2.5.0
 Pygments==2.15.1
+pylint==3.0.3
+PyPika==0.48.9
+pyproject_hooks==1.0.0
 PySocks==1.7.1
+python-dateutil==2.8.2
+python-dotenv==1.0.0
 python-socks==2.3.0
+PyYAML==6.0.1
 quickjs==1.19.2
 replicate==0.11.0
 requests==2.31.0
@@ -94,6 +142,9 @@ sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.5
 stack-data==0.6.2
+starlette==0.32.0.post1
+sympy==1.12
+tenacity==8.2.3
 tensorboard==2.12.3
 tensorboard-data-server==0.7.1
 tensorflow==2.12.0
@@ -101,14 +152,22 @@ tensorflow-estimator==2.12.0
 tensorflow-io-gcs-filesystem==0.32.0
 termcolor==2.3.0
 tls-client==0.2.1
+tokenizers==0.15.0
+tomli==2.0.1
+tomlkit==0.12.3
 tqdm==4.66.1
 traitlets==5.9.0
 trio==0.22.1
 trio-websocket==0.10.3
-typing_extensions==4.7.1
+typer==0.9.0
+typing_extensions==4.9.0
 urllib3==1.26.16
+uvicorn==0.25.0
+uvloop==0.19.0
+watchfiles==0.21.0
 wcwidth==0.2.6
 websocket-client==1.6.1
+websockets==12.0
 Werkzeug==2.3.6
 wrapt==1.14.1
 wsproto==1.2.0
